<resources>
    <string name="app_name">NavigationComponent_Chapter_3_Tugas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="loginView">LOGIN</string>
    <string name="registerView">REGISTER</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello, user</string>
</resources>